--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -57,18 +57,17 @@
 
                     <tr>
                         <td>Contact type:
-                            <obs id="contact-type" conceptId="164181AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 answerConceptIds="1650AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162186AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 answerLabels="Phone,Physical"
+                            <obs id="contact-type" conceptId="164966"
+                                 answerConceptIds="1650AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164965"
+                                 answerLabels="Phone tracing,Physical tracing"
                                  style="dropdown" />
                         </td>
                      <td> &#160;&#160;&#160;Status : &#160;&#160;&#160;
-                            <obs id="contact-status" conceptId="164849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                            <obs id="contact-status" conceptId="159811AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 style="dropdown" answerLabels="Successful,Not successful"/>
+                                 style="dropdown" answerLabels="Contacted and linked,Contacted but not linked"/>
                         </td>
                     </tr>
-
             </table>
         </fieldset>
         <fieldset>
