--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -18,10 +18,13 @@
     <script type="text/javascript">
         var populationTypeSelected = function () {
             var val = jq(this).val();
-            if (val == 1066 ){
+            var keypop = jq('#key-population');
+            if (val == 164929 ){
                 jq("#key-population").show();
-            }else{
+            }
+            if(val == 164928){
                 jq("#key-population").hide();
+                clearHiddenSections(keypop);
             }
         }
         var hasDisabilitySelected = function () {
@@ -162,7 +165,7 @@
             //pop type
             jq("#key-population").hide();
             jq('input[type=radio].key-population').prop("checked", false);
-            jq('input[type=radio].population-type').change(populationTypeSelected);
+            jq('#population-type :input[type=radio]').change(populationTypeSelected);
             //disability
             jq('#has-disability input').change(hasDisabilitySelected);
             jq('#disability select').prop("disabled", true);
@@ -263,10 +266,11 @@
         <fieldset>
             <legend>Population Type</legend>
             <div>
-                Client population type:
-                &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                     answerLabel="Key Population, General Population" style="checkbox" /><br/>
+                Population type : &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                <obs conceptId="164930"
+                     answerConceptIds="164928,164929"
+                     answerLabels="General Population,Key Population" id="population-type"
+                     style="radio" />
             </div>
             <table id="key-population">
                 <tr>
@@ -289,7 +293,7 @@
                 <tr>
                     <td>
                         Does client have any disability? &#160;&#160;&#160;&#160;&#160;
-                        <obs id="has-disability" conceptId="162558AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs id="has-disability" conceptId="164951"
                              answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerLabel="Yes,No"
                              style="radio" />
@@ -320,8 +324,11 @@
             <table id="tbl-hiv-selftest">
                 <tr>
                     <td>Has the client done HIV self test in the last 12 months? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="hb-self-test" conceptId="1492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             style="yes_no" />
+                        <obs class="hb-self-test" conceptId="164952"
+                             answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             answerLabel="Yes,No"
+                             style="radio"
+                        />
                     </td>
                 </tr>
             </table>
@@ -332,8 +339,8 @@
                 <tr>
                     <td>Indicate HTS strategy used: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs class="hts-strategy"
-                             conceptId="160540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerConceptIds="164163AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160539AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163121AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159938AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159939AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             conceptId="164956"
+                             answerConceptIds="164163AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164953,164954,164955,159938AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159939AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerLabels="Provider Initiated Testing(PITC),Non Provider Initiated Testing,Integrated VCT Center,Stand Alone VCT Center,Home Based Testing,Mobile Outreach HTS,Other"
                         />
                     </td>
@@ -353,8 +360,8 @@
             <table id="tbl-couple-testing">
                 <tr>
                     <td>Client tested as? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs id="couple-testing" conceptId="161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs id="couple-testing" conceptId="164959"
+                             answerConceptIds="164957,164958"
                              style="radio" answerLabels="Individual,Couple"/>
                     </td>
                 </tr>
@@ -370,13 +377,15 @@
                         </td>
                         <td>&#160;&#160;&#160;&#160; Kit Name
                             <obs class="kit-name"
-                            conceptId="164422AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                            conceptId="164962"
+                                 answerConceptIds="164960,164961,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 style="dropdown" answerLabels="Determine,Uni-Gold,Invalid"
                             />
 
                         </td>
                         <td>&#160;&#160;&#160;&#160;Lot Number
                             <obs class="lot-number"
-                            conceptId="164409AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                            conceptId="164964"
                             />
 
                         </td>
@@ -396,13 +405,15 @@
                         </td>
                         <td>&#160;&#160;&#160;&#160; Kit Name
                             <obs class="kit-name"
-                                 conceptId="164422AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 conceptId="164962"
+                                 answerConceptIds="164960,164961,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 style="dropdown" answerLabels="Determine,Uni-Gold,Invalid"
                             />
 
                         </td>
                         <td>&#160;&#160;&#160;&#160;Lot Number
                             <obs class="lot-number"
-                                 conceptId="164409AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 conceptId="164964"
                             />
 
                         </td>
@@ -440,7 +451,7 @@
             <table id="tbl-tb-screening">
                 <tr>
                     <td>Tb Screening results: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs id="tb-screening" conceptId="1659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="1660AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142177AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1662AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1110AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs id="tb-screening" conceptId="1659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="1660AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142177AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1662AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              style="radio" answerLabels="No TB Signs,Presumed TB,TB Confirmed,Not Done,On TB Treatment" />
                     </td>
                 </tr>
@@ -451,21 +462,12 @@
             <table id="tbl-remarks">
                 <tr>
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Remarks: &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="remarks" conceptId="163761AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  rows="5" cols="80"
+                        <obs class="remarks" conceptId="163042AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  rows="5" cols="80"
                         />
                     </td>
                 </tr>
             </table>
-            <br /><br />
-            <table id="tbl-hts-provider">
-                <tr>
-                    <td><strong>Indicate HTS provider name: </strong>&#160;&#160;&#160;&#160;&#160;&#160;
-                        <obs class="provider-name" conceptId="1473AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                        />
-                    </td>
-                </tr>
-            </table>
-        </fieldset>
+          </fieldset>
     </div>
     <div class="ke-form-footer">
         <submit/>
