--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -229,7 +229,7 @@ Green Card follow-up visit form
             var cnsNotes = jq('.cns-notes textarea').val('');
             var gusFindings = jq('.gus-findings');
             var gusNotes = jq('.gus-notes textarea').val('');
-            if (val == 1116){
+            if (val == 1115){
                 jq("#tbl-systems-review").hide();
                 clearHiddenSections(skinFindings);
                 clearHiddenSections(skinNotes);
@@ -817,6 +817,16 @@ Green Card follow-up visit form
          jq('#chronic-illness :input[type=radio]').change(chronicIllnessesSelected);
          jq('#population-type :input[type=radio]').change(populationTypeSelected);
 
+         //Differentiated care
+            var PATIENT_STABLE = "<lookup expression="kenyaemr.patientIsStable()" />";
+            if(PATIENT_STABLE =="true") {
+                jq('#fast-track').show();
+                jq('#standard-care').hide();
+            }else{
+                jq('#standard-care').show();
+                jq('#fast-track').hide();
+            }
+
             var strtext = "";
             var familyPlanningOption = getValue('fplanning.value');
             var pregnancyOption = getValue('pregnancyOption.value');
@@ -1202,7 +1212,7 @@ Green Card follow-up visit form
             //IPT Screening is mandatory field
             if (onAntiTbDrugs !=1065 &amp;&amp; onIpt == false) {
                 getField('on-ipt.error').html('Please indicate whether currently on IPT').show();
-                return false;
+
             }
             return true;
 
@@ -1525,7 +1535,7 @@ Green Card follow-up visit form
                             Patient on anti-TB Drugs? &#160;
                             <obs conceptId="1110AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 answerLabel="Yes,No"
+                                 answerLabel="Yes,No" required="true"
                                  style="radio"
                                  id="on-anti-tb-drugs" />
                             <br/>
@@ -1976,7 +1986,7 @@ Green Card follow-up visit form
                     Patient has any chronic illnesse(s)? &#160;&#160;&#160;&#160;&#160;&#160;&#160;
                     <obs id="chronic-illness" conceptId="162747AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                     answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                    style="radio" answerLabels="Yes,No"
+                    style="radio" answerLabels="Yes,No" required="true"
                     />
                 </div>
                 <table id="tbl-chronic-illness">
@@ -2669,10 +2679,7 @@ Green Card follow-up visit form
                     <render n="13" concept="Diagnosis"/>
                     <render n="14" concept="Diagnosis"/>
                     <render n="15" concept="Diagnosis"/>
-
                 </repeat>
-
-
             </table>
         </fieldset>
         <fieldset>
@@ -2820,18 +2827,26 @@ Green Card follow-up visit form
                     </td>
 
                 </tr><tr></tr>
-                <tr>
+            </table>
+              <table>
+                    <tr id="standard-care">
+                        <td>Differentiated Care</td>
+                        <td>
+                            <obs conceptId="164947" id="standard"
+                                 answerConceptIds="164942"
+                                 style="dropdown"
+                                 answerLabels="Standard Care"/>
+                        </td>
+                    </tr>
+                   <tr id="fast-track">
                     <td>Differentiated Care</td>
-
                     <td>
-
                         <obs conceptId="164947" id="fast-track"
                              answerConceptIds="164942,164943,164944,164945,164946"
                              style="dropdown"
                              answerLabels="Standard Care,Fast Track,Community ART Distribution - HCW Led,Community ART Distribution - Peer Led,Facility ART Distribution Group"/>
                     </td>
                 </tr>
-
             </table>
         </fieldset>
 
