refined data definitions and cohort definitions to fetch from etl for hts

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -378,8 +378,8 @@
                         <td>&#160;&#160;&#160;&#160; Kit Name
                             <obs class="kit-name"
                             conceptId="164962"
-                                 answerConceptIds="164960,164961,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 style="dropdown" answerLabels="Determine,Uni-Gold,Invalid"
+                                 answerConceptIds="164960,164961"
+                                 style="dropdown" answerLabels="Determine,Uni-Gold"
                             />
 
                         </td>
@@ -400,14 +400,14 @@
 
                         <td>HIV Test 2 Results:
                             <obs id="hiv-test2-result" conceptId="1326AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 style="dropdown" answerLabels="Positive,Negative,Invalid,N/A"/>
+                                 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 style="dropdown" answerLabels="Positive,Negative,N/A"/>
                         </td>
                         <td>&#160;&#160;&#160;&#160; Kit Name
                             <obs class="kit-name"
                                  conceptId="164962"
-                                 answerConceptIds="164960,164961,163611AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 style="dropdown" answerLabels="Determine,Uni-Gold,Invalid"
+                                 answerConceptIds="164960,164961"
+                                 style="dropdown" answerLabels="Determine,Uni-Gold"
                             />
 
                         </td>
