--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -39,19 +39,39 @@
         }
 
         function onTransferStatusChange() {
+            var transferStatus = getValue('transfer-in-status.value');
+            var pgender = "<lookup expression="patient.gender" />";
+            var pAge = parseInt('<lookup expression="patient.age"/>');
             //New patient
-            if (getValue('transfer-in-status.value') == NO_CONCEPT_ID) {
+            if (transferStatus== NO_CONCEPT_ID) {
                 jq('#transfer-details :input').prop('disabled', false);
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#transfer-details').hide();
                 jq('#patient-history').show();
                 jq('#art-history').show();
+                jq('#baseline-fieldset').show();
+                jq('#baseline-fieldset :input').prop('disabled', false);
                 jq('#baseline-assessment1').show();
                 jq('#baseline-assessment2').show();
                 jq('#baseline-assessment3').show();
                 jq('#treatment-supporter').show();
                 //jq('#generate-hiv-id').show(); Deactivate generate upn
                 jq('#transit-patient').hide();
+                //Gender based validations  pregnancy and breastfeeding
+                if (pgender == 'M') {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                if (pgender == 'F' &amp;&amp; pAge &lt; 10) {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                //Gender based Validations bmi and muac
+                if (pAge &lt; 2 || getValue('pregnant.value') == 1065) {
+                    jq('.muac').show();
+                }
+
+//              clearHiddenSections(jq('#hiv-id'));
                 clearHiddenSections(jq('#transfer-details'));
                 clearHiddenSections(jq('#confirmed-positive-date'));
                 clearHiddenSections(jq('#facility-confirmed'));
@@ -62,19 +82,39 @@
                 clearHiddenSections(jq('#pepChecked'));
                 clearHiddenSections(jq('#prepChecked'));
                 clearHiddenSections(jq('#haartChecked'));
-                //Transfer in
-            } else if (getValue('transfer-in-status.value') == YES_CONCEPT_ID) {
+                clearHiddenSections(jq('#baseline-fieldset'));
+
+            }
+            //Transfer in
+            if (transferStatus== YES_CONCEPT_ID) {
                 jq('#transfer-details :input').prop('disabled', false);
-                jq('#hiv-id :input').prop('readonly',true);
+                jq('#hiv-id :input').prop('disabled', false);
+               // jq('#hiv-id :input').prop('readonly',true);
                 jq('#generate-hiv-id').hide();
                 jq('#transfer-details').show();
                 jq('#patient-history').show();
                 jq('#art-history').show();
+                jq('#baseline-fieldset').show();
+                jq('#baseline-fieldset :input').prop('disabled', false);
                 jq('#baseline-assessment1').show();
                 jq('#baseline-assessment2').show();
                 jq('#baseline-assessment3').show();
                 jq('#treatment-supporter').show();
                 jq('#transit-patient').hide();
+                //Gender based validations  pregnancy and breastfeeding
+                if (pgender == 'M') {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                if (pgender == 'F' &amp;&amp; pAge &lt; 10) {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                //Gender based Validations bmi and muac
+                if (pAge &lt; 2 || getValue('pregnant.value') == 1065) {
+                    jq('.muac').show();
+                }
+//                clearHiddenSections(jq('#hiv-id'));
                 clearHiddenSections(jq('#transfer-details'));
                 clearHiddenSections(jq('#confirmed-positive-date'));
                 clearHiddenSections(jq('#facility-confirmed'));
@@ -85,8 +125,12 @@
                 clearHiddenSections(jq('#pepChecked'));
                 clearHiddenSections(jq('#prepChecked'));
                 clearHiddenSections(jq('#haartChecked'));
-                //Transit
-            } else if (getValue('transfer-in-status.value') == TRANSIT) {
+                clearHiddenSections(jq('#baseline-fieldset'));
+
+            }
+        //Transit
+            if (transferStatus== TRANSIT) {
+                jq('#hiv-id :input').prop('disabled', false);
                 jq('#transit-patient').show();
                 jq('#transfer-details').hide();
                 clearHiddenSections(jq('#transfer-details'));
@@ -96,6 +140,7 @@
                 jq('#treatment-supporter-fieldset').hide();
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#generate-hiv-id').hide();
+//              clearHiddenSections(jq('#hiv-id'));
                 clearHiddenSections(jq('#transfer-details'));
                 clearHiddenSections(jq('#confirmed-positive-date'));
                 clearHiddenSections(jq('#facility-confirmed'));
@@ -106,11 +151,27 @@
                 clearHiddenSections(jq('#pepChecked'));
                 clearHiddenSections(jq('#prepChecked'));
                 clearHiddenSections(jq('#haartChecked'));
+                clearHiddenSections(jq('#baseline-fieldset'));
 
-            }else{
+            }
+            if (transferStatus == "") {
                 jq('#transfer-details :input').prop('disabled', true);
                 jq('#hiv-id :input').prop('disabled', true);
                 jq('#generate-hiv-id').hide();
+                //Gender based validations  pregnancy and breastfeeding
+                if (pgender == 'M') {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                if (pgender == 'F' &amp;&amp; pAge &lt; 10) {
+                    jq('#pregnant :input').prop('disabled', true);
+                    jq('#breastfeeding :input').prop('disabled', true);
+                }
+                //Gender based Validations bmi and muac
+                if (pAge &lt; 2 || getValue('pregnant.value') == 1065) {
+                    jq('.muac').show();
+                }
+//              clearHiddenSections(jq('#hiv-id'));
                 clearHiddenSections(jq('#transfer-details'));
                 clearHiddenSections(jq('#confirmed-positive-date'));
                 clearHiddenSections(jq('#facility-confirmed'));
@@ -121,6 +182,7 @@
                 clearHiddenSections(jq('#pepChecked'));
                 clearHiddenSections(jq('#prepChecked'));
                 clearHiddenSections(jq('#haartChecked'));
+                clearHiddenSections(jq('#baseline-fieldset'));
             }
         }
         function onArtStatusChange() {
@@ -289,12 +351,21 @@
                 if (code &gt;= 48  &amp;&amp; code &lt;= 57) //numbers
                     event.preventDefault();
             });
-            onTransferStatusChange();
+            //onTransferStatusChange();
+			//defaults
+            jq('#transfer-details :input').prop('disabled', true);
+            jq('#hiv-id :input').prop('disabled', true);
+            jq('#generate-hiv-id').hide();
+            jq('#baseline-fieldset :input').prop('disabled', true);
 
             //Gender based validations  pregnancy and breastfeeding
-            if (pgender == 'M' || pAge &lt; 10) {
-                jq("#pregnant input[type=radio]").prop("disabled" ,true);
-                jq("#breastfeeding input[type=radio]").prop("disabled" ,true);
+            if (pgender == 'M') {
+                jq('#pregnant :input').prop('disabled', true);
+                jq('#breastfeeding :input').prop('disabled', true);
+            }
+            if (pgender == 'F' &amp;&amp; pAge &lt; 10) {
+                jq('#pregnant :input').prop('disabled', true);
+                jq('#breastfeeding :input').prop('disabled', true);
             }
              //Gender based Validations bmi and muac
             if (pAge &lt; 2 || getValue('pregnant.value') == 1065) {
@@ -411,6 +482,7 @@
 								id="transfer-in-status" conceptId="164932" style="radio"
 								answerConceptIds="164144,160563,164931"
 								answerLabels="New Patient,Transfer in,Transit"
+								required="true"
 						/>
 					</td>
 				</tr>
@@ -419,9 +491,28 @@
 						<script type="text/javascript">
                             jq(function(){
                                 var PATIENT_IS_ENROLLED_HIV = "<lookup expression="kenyaemr.hasHivUniquePatientNumber()" />";
+                                var pgender = "<lookup expression="patient.gender" />";
                                 if(PATIENT_IS_ENROLLED_HIV) {
                                     jq('#hiv-id :input').prop('readonly', true);
                                     jq('#generate-hiv-id').hide();
+
+                                    jq('#transfer-details :input').prop('disabled', false);
+                                    jq('#hiv-id :input').prop('disabled', false);
+                                    jq('#baseline-fieldset :input').prop('disabled', false);
+                                    //Gender based validations  pregnancy and breastfeeding
+                                    if (pgender == 'M') {
+                                        jq('#pregnant :input').prop('disabled', true);
+                                        jq('#breastfeeding :input').prop('disabled', true);
+                                    }
+                                    if (pgender == 'F' &amp;&amp; pAge &lt; 10) {
+                                        jq('#pregnant :input').prop('disabled', true);
+                                        jq('#breastfeeding :input').prop('disabled', true);
+                                    }
+                                    //Gender based Validations bmi and muac
+                                    if (pAge &lt; 2 || getValue('pregnant.value') == 1065) {
+                                        jq('.muac').show();
+                                    }
+
                                 }
                             });
 
@@ -433,7 +524,6 @@
 							<input type="button" id="generate-hiv-id" value="Generate"/>
 					</td>
 				</tr>
-
 			</table>
 			<table id="transit-patient" style="display: inline-block">
 				<tr>
@@ -693,7 +783,7 @@
 				<tr>
 					<td>Pregnant</td>
 					<td>
-						<obs id = "pregnant" conceptId="5272AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						<obs id="pregnant" conceptId="5272AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerLabels="Yes,No"
 							 style="radio"
@@ -703,7 +793,7 @@
 				<tr>
 					<td>Breastfeeding</td>
 					<td>
-						<obs id = "breastfeeding" conceptId="5632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+						<obs id="breastfeeding" conceptId="5632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerLabels="Yes,No"
 							 style="radio"
