--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -2066,7 +2066,7 @@ Green Card follow-up visit form
                             <br/>
                         </td>
                         <td>
-                            <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                            <span class="value"><recentObs conceptId="164948"/></span>
                         </td>
                     </tr>
                     <tr>
@@ -2080,7 +2080,7 @@ Green Card follow-up visit form
                             <br/>
                        </td>
                         <td>
-                            <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                            <span class="value"><recentObs conceptId="164949"/></span>
                         </td>
                     </tr>
                 </table>
@@ -2096,7 +2096,7 @@ Green Card follow-up visit form
                             <br/>
                           </td>
                         <td>
-                            <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                            <span class="value"><recentObs conceptId="164950"/></span>
                         </td>
                     </tr>
                 </table>
