RDQA to care and treatment indicators to fetch from ETL

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -2160,7 +2160,7 @@ Green Card follow-up visit form
                             <br/>
                         </td>
                         <td>
-                            <span class="value"><recentObs conceptId="164948"/></span>
+                            <span class="value"><!--<recentObs conceptId="164948"/>--></span>
                         </td>
                     </tr>
                     <tr>
@@ -2174,7 +2174,7 @@ Green Card follow-up visit form
                             <br/>
                        </td>
                         <td>
-                            <span class="value"><recentObs conceptId="164949"/></span>
+                            <span class="value"><!--<recentObs conceptId="164949"/>--></span>
                         </td>
                     </tr>
                 </table>
@@ -2190,7 +2190,7 @@ Green Card follow-up visit form
                             <br/>
                           </td>
                         <td>
-                            <span class="value"><recentObs conceptId="164950"/></span>
+                            <span class="value"><!--<recentObs conceptId="164950"/>--></span>
                         </td>
                     </tr>
                 </table>
