added moh731greencard hts querries

--- a/omod/src/main/webapp/resources/htmlforms/familyTesting/familyTestingFollowup.html
+++ b/omod/src/main/webapp/resources/htmlforms/familyTesting/familyTestingFollowup.html
@@ -39,18 +39,16 @@
 
 
         <fieldset>
-            <legend>HIV Details</legend>
+            <legend>Treatment Preparation</legend>
             <table>
                 <tr>
-                    <td>HIV Test Result this visit</td>
+                    <td>Couselling sessions 1</td>
                     <td>
-                        <obs class="hiv-result" conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                        <obs class="session-1" conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                              style="dropdown" answerLabels="Pos,Neg,Exposed,Unknown"/>
                     </td>
-                </tr>
-                <tr>
-                    <td>Next HIV Test Date</td>
+                    <td>Date</td>
                     <td>
                         <obs class="next-hivtest-date" conceptId="164400AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
                     </td>
