refined CnT indicators in moh 731

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -177,7 +177,7 @@
 			tbContactInHouseHold();
 			jq('#tbcontact input').click(tbContactInHouseHold);
 			pmtctDrugsForMother();
-			jq('#pmtctDrugsReceived input').click(pmtctDrugsForMother);
+			jq('#pmtctDrugsReceived input').change(pmtctDrugsForMother);
 			onARTatEnrollment();
 			jq('#onART input').click(onARTatEnrollment);
 
